--- a/app/views/lessons/_form.html.haml
+++ b/app/views/lessons/_form.html.haml
@@ -6,7 +6,7 @@
   .form-inputs
     = f.input :title, input_html: { autocomplete: 'off' }
     = f.association :chapter, collection: @course.chapters, include_blank: false
-    = f.input :content, as: :rich_text_area
+    = f.text_area :content, :id => "full-featured-non-premium"
     = f.input :vimeo
 
     %p
