--- a/app/views/lessons/_formnew.html.haml
+++ b/app/views/lessons/_formnew.html.haml
@@ -6,7 +6,8 @@
   .form-inputs
     = f.input :title, input_html: { autocomplete: 'off' }
     = f.input :chapter_id, collection: @course.chapters, selected: params[:chapter_id], value_method: :slug, include_blank: false
-    = f.input :content, as: :rich_text_area
+    = f.text_area :content, :id => "full-featured-non-premium"
+
     = f.input :vimeo
 
     %p
