fix drag and drop

--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -59,9 +59,9 @@ $custompurple:#563d7c;
 .dropdown {z-index: 9999;}
 
 // simple_form input for rich_text_area
-trix-editor.form-control {
-  height: auto;
-}
+// trix-editor.form-control {
+//   height: auto;
+// }
 
 // footer on bottom
 html {
