--- a/app/views/courses/course_wizard/landing_page.html.haml
+++ b/app/views/courses/course_wizard/landing_page.html.haml
@@ -13,7 +13,7 @@
 
     = f.input :short_description, :placeholder => "Short Course Description"
 
-    = f.text_area :description, :id => "full-featured-non-premium"
+    = f.text_area :description, :id => "full-featured-non-premium", :rows => 20, :cols => 900 
 
 
     = f.label :tags
