--- a/app/views/courses/course_wizard/landing_page.html.haml
+++ b/app/views/courses/course_wizard/landing_page.html.haml
@@ -1,19 +1,19 @@
 = render layout: 'courses/course_wizard/step' do
   = simple_form_for @course, url: course_course_wizard_path, method: :put do |f|
-
+    .form-inputs
     = f.input :title, input_html: { autocomplete: 'off' }
-
+    = f.label :avatar
     .row
     - if @course.avatar.attached?
       = image_tag @course.avatar, width: "200px"
       .row
       = @course.avatar.filename
     .row
-    = f.input :avatar
+    = f.file_field :avatar
 
     = f.input :short_description, :placeholder => "Short Course Description"
 
-    = f.text_area :description, :id => "full-featured-non-premium", :rows => 20, :cols => 900 
+    = f.text_area :description, :id => "full-featured-non-premium", :rows => 20, :cols => 900
 
 
     = f.label :tags
