--- a/app/views/static_pages/landing_page.html.haml
+++ b/app/views/static_pages/landing_page.html.haml
@@ -30,6 +30,8 @@
     .p-2
     = link_to 'Register', new_user_registration_path, class: 'btn btn-custom-purple btn-lg'
     = link_to 'Login', new_user_session_path, class: 'btn btn-custom-purple btn-lg'
+    = link_to 'Teach on Islam4Kids', teach_path, class: 'btn btn-custom-purple btn-lg'
+    .row
     .row.mt-1
     .p-2
     .form-inline.my-2.my-lg-0
