--- a/app/views/static_pages/become_teacher.html.haml
+++ b/app/views/static_pages/become_teacher.html.haml
@@ -4,29 +4,27 @@
   Online Courses - Learn Anything, On Your Schedule
 
 :css
-  .parallax {
+  .teacher {
     background-image: url("https://cdn.pixabay.com/photo/2020/12/14/17/40/studying-5831644_960_720.jpg");
     height: auto;
-    /* Create the parallax scrolling effect */
-    /* background-attachment: fixed; */
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
     color: white;
   }
-  / parallax
+  / teacher
 
-.jumbotron.shadow.parallax
+.jumbotron.shadow.teacher
   %h1.text-shadow
     %b Are you interested in helping children learn about Islam?
 
-  .p-4
+  .p-3
 
   - if current_user
     .p-3
       = link_to 'Register as a Teacher', edit_user_path(@user = current_user), class: 'btn btn-custom-purple btn-lg'
   - else
-    %h3.text-shadow Join to access all the courses
+    %h3.text-shadow Register or login to create your first lesson
     .p-2
     = link_to 'Register', new_user_registration_path, class: 'btn btn-custom-purple btn-lg'
     = link_to 'Login', new_user_session_path, class: 'btn btn-custom-purple btn-lg'
