--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -1,4 +1,4 @@
-%nav.navbar.navbar-expand-lg.navbar-light{:style => "background-color: #e3f2fd;"}
+%nav.navbar.navbar-expand-lg.navbar-light.fixed-top{:style => "background-color: #e3f2fd;"}
   %a.navbar-brand{:href => "/"}
 
     /.fa.fa-graduation-cap
