--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -138,3 +138,5 @@
       %ul.navbar-nav.mr-right
         = active_link_to 'Register', new_user_registration_path
         = active_link_to 'Login', new_user_session_path
+        = link_to user_google_oauth2_omniauth_authorize_path, class: 'nav-link' do
+          .fab.fa-google
