--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -15,6 +15,11 @@
           .text-danger.fa.fa-signal
         = link_to @user.username, user_path(@user)
       .card-footer
+        - if @user == current_user && @user.uid.nil?
+          = link_to user_google_oauth2_omniauth_authorize_path, class: 'btn btn-outline-primary btn-sm' do
+            .fab.fa-google
+            Sync with Google
+      .card-footer
         Signed up
         = time_ago_in_words(@user.created_at)
         ago
