--- a/app/javascript/stylesheets/scaffolds.scss
+++ b/app/javascript/stylesheets/scaffolds.scss
@@ -60,3 +60,7 @@ div.actions {
 #error_explanation ul li {
   font-size: 12px;
   list-style: square; }
+
+.trix-content.img {
+  max-width: 95%;
+}
