added color to icons

--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -100,3 +100,99 @@ background-color: #e9ecef97;
 .img-responsive {
   max-width: 95%;
 }
+
+.fa.fa-book-open {
+  color: blue;
+}
+
+.fa.fa-tasks {
+  color: magenta;
+}
+
+.fa.fa-lock-open {
+  color: magenta;
+}
+
+.fa.fa-tags {
+  color: magenta;
+}
+
+.fa.fa-chalkboard-teacher {
+  color: red;
+}
+
+.fa.fa-lock {
+  color: red;
+}
+
+.fa.fa-child {
+  color: green;
+}
+
+.fa.fa-users {
+  color: green;
+}
+
+.fa.fa-user {
+  color: green;
+}
+
+.fa.fa-globe-africa {
+  color: green;
+}
+
+.fa.fa-school {
+  color: green;
+}
+
+.fa.fa-comment {
+  color: brown;
+}
+
+.fa.fa-star {
+  color: yellow;
+}
+
+.far.fa-star {
+  color: yellow;
+}
+
+.fa.fa-bell {
+  color: yellow;
+}
+
+.fa.fa-infinity {
+  color: yellow;
+}
+
+.far.fa-bookmark {
+  color: red;
+}
+
+.fa.fa-bookmark {
+  color: red;
+}
+
+.far.fa-clock {
+  color: purple;
+}
+
+.fa.fa-chart-line {
+  color: orange;
+}
+
+.fa.fa-play-circle {
+  color: orange;
+}
+
+.fa.fa-eye {
+  color: orange;
+}
+
+.fa.fa-sign-out-alt {
+  color: red;
+}
+
+.fa-fa-cog {
+  color: grey;
+}
