--- a/app/views/courses/analytics.html.haml
+++ b/app/views/courses/analytics.html.haml
@@ -8,7 +8,7 @@
 = link_to 'Courses', courses_path
 |
 = link_to course_path(@course) do
-  .fa.fa-graduation-cap
+  .fa.fa-book-open
   = @course.title
 |
 = link_to analytics_course_path(@course) do
