--- a/app/views/courses/course_wizard/_step.html.haml
+++ b/app/views/courses/course_wizard/_step.html.haml
@@ -6,7 +6,7 @@
 
 = link_to 'Courses', courses_path
 |
-.fa.fa-graduation-cap
+.fa.fa-book-open
 = link_to course_path(@course) do
   = @course.title
 |
