--- a/app/views/courses/index.html.haml
+++ b/app/views/courses/index.html.haml
@@ -6,7 +6,7 @@
 
 %h3
   .text-center
-    .fa.fa-graduation-cap
+    .fa.fa-book-open
     = controller_name.humanize + ":"
     = action_name.humanize
     .badge.badge-info
