--- a/app/views/courses/new.html.haml
+++ b/app/views/courses/new.html.haml
@@ -6,7 +6,7 @@
 .card.shadow
   .card-header
     %h3
-      .fa.fa-graduation-cap
+      .fa.fa-book-open
       New course
   .card-body
     = render 'form'
