--- a/app/views/enrollments/edit.html.haml
+++ b/app/views/enrollments/edit.html.haml
@@ -7,7 +7,7 @@
 = link_to 'Courses', courses_path
 |
 = link_to course_path(@enrollment.course) do
-  .fa.fa-graduation-cap
+  .fa.fa-book-open
   = @enrollment.course.title
 |
 = link_to 'Add Review', edit_enrollment_path(@enrollment)
