--- a/app/views/enrollments/index.html.haml
+++ b/app/views/enrollments/index.html.haml
@@ -37,7 +37,7 @@
           /bought
         %th
           = sort_link(@q, :course_title, "Course")
-          /.fa.fa-graduation-cap
+          /.fa.fa-book-open
           /Course
         %th Teacher
         %th
