--- a/app/views/enrollments/new.html.haml
+++ b/app/views/enrollments/new.html.haml
@@ -6,7 +6,7 @@
 .card.shadow
   .card-header
     %h3
-      .fa.fa-graduation-cap
+      .fa.fa-book-open
       = link_to @course.title, course_path(@course)
   .card-body
     .far.fa-bookmark
