--- a/app/views/lessons/edit.html.haml
+++ b/app/views/lessons/edit.html.haml
@@ -4,7 +4,7 @@
   Edit Lesson
   = @lesson.title
 
-.fa.fa-graduation-cap
+.fa.fa-book-open
 = link_to course_path(@course) do
   = @course.title
 |
