--- a/app/views/static_pages/become_teacher.html.haml
+++ b/app/views/static_pages/become_teacher.html.haml
@@ -40,7 +40,7 @@
     .card-header
       %h3 Why teach?
       %h1
-      .fa.fa-graduation-cap
+      .fa.fa-book-open
       The benefits of learning your deen and teaching that to others are well known among Muslims.
 
   .card-group.shadow
