--- a/app/views/enrollments/_enrollment.html.haml
+++ b/app/views/enrollments/_enrollment.html.haml
@@ -4,7 +4,7 @@
     = link_to enrollment.user.username, user_path(enrollment.user)
     .fa.fa-clock
     = time_ago_in_words(enrollment.updated_at)
-    .fa.fa-graduation-cap
+    .fa.fa-book-open
     = link_to enrollment.course, course_path(enrollment.course)
   .card-body
     .text-warning.fa.fa-star
