--- a/app/views/static_pages/landing_page.html.haml
+++ b/app/views/static_pages/landing_page.html.haml
@@ -49,7 +49,7 @@
   .card
     .card-body
       %h1
-        .fa.fa-graduation-cap
+        .fa.fa-book-open
       = pluralize(Course.approved.published.count, 'online courses')
       /= Course.count
       /online courses
@@ -68,7 +68,7 @@
   .card
     .card-body
       %h1
-        .fa.fa-user-graduate
+        .fa.fa-child
       = pluralize(User.count, 'active students')
       /= User.count
       /active learners
@@ -104,7 +104,7 @@
   - if current_user.enrollments.any?
     %h2
       %b
-      .fa.fa-user-graduate
+      .fa.fa-child
       = link_to 'Continue learning ', learning_courses_path
     .row
       - @learning_courses.each do |course|
@@ -178,7 +178,7 @@
   .card
     .card-body
       %b
-        .far.fa-play-circle
+        .fa.fa-play-circle
         Find courses on that meet your needs
       %small
         Choose the course that is right for your current level
