--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -29,14 +29,9 @@
         %th= sort_link(@q, :enrollments_count)
         %th= sort_link(@q, :comments_count)
         %th= sort_link(@q, :user_lessons_count, "Lessons viewed")
-        %th= sort_link(@q, :course_income)
-        %th= sort_link(@q, :enrollment_expences)
-        %th= sort_link(@q, :balance)
         %th= 'sign_ins'.humanize
         %th= 'current_sign_in'.humanize
         %th= 'last_sign_in'.humanize
-        %th= 'current_ip'.humanize
-        %th= 'last_ip'.humanize
     %tbody
       - @users.each do |user|
         %tr
@@ -47,7 +42,7 @@
             - else
               .text-danger.fa.fa-signal
             = link_to user.email, user_path(user)
-          %td= user.created_at.strftime('%d/%m/%y, %H:%M')
+          %td= user.created_at.strftime('%m/%d/%y, %H:%M')
           %td
             - user.roles.each do |role|
               .badge.badge-info
@@ -58,18 +53,14 @@
           %td= user.enrollments_count
           %td= user.comments_count
           %td= user.user_lessons_count
-          %td= user.course_income
-          %td= user.enrollment_expences
-          %td= user.balance
           %td= user.sign_in_count
           %td
             - if user.current_sign_in_at.present?
-              = user.current_sign_in_at.strftime('%d/%m/%y, %H:%M')
+              = user.current_sign_in_at.strftime('%m/%d/%y, %H:%M')
           %td
             - if user.last_sign_in_at.present?
-              = user.last_sign_in_at.strftime('%d/%m/%y - %H:%M')
-          %td= user.current_sign_in_ip
-          %td= user.last_sign_in_ip
+              = user.last_sign_in_at.strftime('%m/%d/%y - %H:%M')
+
 %p
 != pagy_bootstrap_nav(@pagy)
 
