simple form for comments

--- a/app/views/lessons/comments/_form.html.haml
+++ b/app/views/lessons/comments/_form.html.haml
@@ -1,5 +1,5 @@
 = simple_form_for([@course, @lesson, @comment]) do |f|
   = f.error_notification
   = f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present?
-  = f.text_area :content, :id => "full-featured-non-premium"
+  = f.input :content, label: false
   = f.button :submit
