--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -35,10 +35,10 @@
           = @user.sign_in_count
           .row
           %b= 'current_sign_in_at'.humanize + ":"
-          = @user.current_sign_in_at
+          = @user.current_sign_in_at.strftime('%m/%d/%y, %H:%M')
           .row
           %b= 'last_sign_in_at'.humanize + ":"
-          = @user.last_sign_in_at
+          = @user.last_sign_in_at.strftime('%m/%d/%y, %H:%M')
           .row
       .card-footer
         .fa.fa-book-open
