one more colored icon

--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -177,6 +177,10 @@ background-color: #e9ecef97;
   color: purple;
 }
 
+.fa.fa-clock {
+  color: purple;
+}
+
 .fa.fa-chart-line {
   color: orange;
 }
