--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -11,7 +11,7 @@ body { background-image: url("https://cdn.pixabay.com/photo/2017/01/05/08/58/lan
         background-position: center;
         background-repeat: no-repeat;
         background-size: cover;
-        padding-top: 50px;
+        font-family: Arial, sans-serif;
      }
 .collection_check_boxes { margin-right: 10px; }
 .purple-background { background-color: #563d7c; }
