share udemy link in readme

--- a/app/views/courses/index.html.haml
+++ b/app/views/courses/index.html.haml
@@ -7,8 +7,7 @@
 %h3
   .text-center
     .fa.fa-book-open
-    = controller_name.humanize + ":"
-    = action_name.humanize
+    = controller_name.humanize + " "
     .badge.badge-info
       = @courses.count
 %p
