--- a/app/views/static_pages/FAQ.html.haml
+++ b/app/views/static_pages/FAQ.html.haml
@@ -129,3 +129,8 @@
                   Is this website secure?
                   %ul
                     %li Yes, our site uses HTTPS secure protocols.
+                %li
+                  Can I make a website like this?
+                  %ul
+                    %li Yes, I took an online course to help me build this website
+                    %a{:href => "https://www.udemy.com/share/1033KcAEMcd11TQnoD/"} https://www.udemy.com/share/1033KcAEMcd11TQnoD/
