--- a/app/views/static_pages/about.html.haml
+++ b/app/views/static_pages/about.html.haml
@@ -8,7 +8,7 @@
       is dedicated to helping children learn the deen no matter where they are in the world.
 
       %p
-      We initially had a section on our weibsite where we added the worksheets and activities that we created for our own children, but then we realized if it takes a community to raise a child, it takes an ummah to raise an ummah. We created this community site to do just that!
+      We initially had a section on our website where we added the worksheets and activities that we created for our own children, but then we realized if it takes a community to raise a child, it takes an ummah to raise an ummah. We created this community site to do just that!
 
     .card-footer
       Questions?
