--- a/app/views/static_pages/landing_page.html.haml
+++ b/app/views/static_pages/landing_page.html.haml
@@ -117,7 +117,7 @@
     %h2
       = link_to teaching_courses_path, class: "btn btn-danger btn-lg btn-block" do
         .fa.fa-chalkboard-teacher{:style => "color:white !important;"}
-        You are teaching
+        You are Teaching
     .row
       - @teaching_courses.each do |course|
         .col-md-6
