--- a/app/views/static_pages/landing_page.html.haml
+++ b/app/views/static_pages/landing_page.html.haml
@@ -51,18 +51,13 @@
       %h1
         .fa.fa-book-open
       = pluralize(Course.approved.published.count, 'online courses')
-      /= Course.count
-      /online courses
       .row
       %small Explore a variety of Islamic subjects
   .card
     .card-body
       %h1
         .fa.fa-chalkboard-teacher
-        /.fa.fa-brain
       = pluralize(Course.distinct.count(:user_id), 'teachers')
-      /= Course.distinct.count(:user_id)
-      /expert instructors
       .row
       %small Find the right teacher for you
   .card
@@ -70,8 +65,6 @@
       %h1
         .fa.fa-child
       = pluralize(User.count, 'active students')
-      /= User.count
-      /active learners
       .row
       %small Join students from all over the world
   .card
@@ -155,15 +148,6 @@
       = render 'courses/course', course: course
       %p
 %hr
-
--# %h2
--#   .fa.fa-comment
--#   What our students have to say
--# .row
--#   - @latest_good_reviews.each do |enrollment|
--#     .col-md-6
--#       = render 'enrollments/enrollment', enrollment: enrollment
--#       %p
 %br
 .card-group.shadow
   .card
@@ -184,6 +168,6 @@
     .card-body
       %b
         .fa.fa-play-circle
-        Find courses on that meet your needs
+        Find courses that meet your needs
       %small
         Choose the course that is right for your current level
