--- a/app/views/lessons/show.html.haml
+++ b/app/views/lessons/show.html.haml
@@ -30,17 +30,18 @@
             .fa.fa-edit
           = link_to [@course, @lesson], method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-sm btn-danger' do
             .fa.fa-trash
-      .card-footer
-        - unless @lesson.prev.nil?
-          .float-left
-            = link_to course_lesson_path(@course, @lesson.prev), class: 'btn btn-sm btn-info' do
-              .fa.fa-arrow-left
-              Previous Lesson
-        - unless @lesson.next.nil?
-          .float-right
-            = link_to course_lesson_path(@course, @lesson.next), class: 'btn btn-sm btn-info' do
-              .fa.fa-arrow-right
-              Next Lesson
+      - unless @lesson.prev.nil? && @lesson.next.nil?
+        .card-footer
+          - unless @lesson.prev.nil?
+            .float-left
+              = link_to course_lesson_path(@course, @lesson.prev), class: 'btn btn-sm btn-info' do
+                .fa.fa-arrow-left
+                Previous Lesson
+          - unless @lesson.next.nil?
+            .float-right
+              = link_to course_lesson_path(@course, @lesson.next), class: 'btn btn-sm btn-info' do
+                .fa.fa-arrow-right
+                Next Lesson
       .card-footer
         = link_to course_path(@course), class: 'btn btn-sm btn-secondary' do
           .fa.fa-book-open
