--- a/app/views/courses/_course.html.haml
+++ b/app/views/courses/_course.html.haml
@@ -33,12 +33,13 @@
         = course.lessons_count
       .col-md-6
         .text-right
+          Teacher: 
           - if course.user.image?
             = image_tag course.user.image, size: '20x20', alt: "#{course.user.teacher_name}", class: 'rounded-circle'
           - if course.user.teacher_name?
-            = link_to course.user.teacher_name, user_path(course.user)
+            = course.user.teacher_name
           - else
-            = link_to course.user.username, user_path(course.user)
+            = course.user.username
   - if current_user
     - if policy(course).owner?
       .card-footer
