--- a/app/views/enrollments/_form.html.haml
+++ b/app/views/enrollments/_form.html.haml
@@ -7,4 +7,4 @@
     = f.input :rating, collection: 1..5, as: :radio_buttons
 
   .form-actions
-    = f.button :submit
+    = f.button :submit, "Update Rating"
