--- a/app/views/enrollments/_enrollment.html.haml
+++ b/app/views/enrollments/_enrollment.html.haml
@@ -12,4 +12,4 @@
   - if current_user
     .card-footer
       - if policy(enrollment).edit?
-        = link_to 'Edit Review', edit_enrollment_path(enrollment)
+        = link_to 'Edit Rating', edit_enrollment_path(enrollment)
