add incentives to teacher page

--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -105,7 +105,15 @@ background-color: #e9ecef97;
   color: blue;
 }
 
+.far.fa-check-circle {
+  color: blue;
+}
+
 .fa.fa-tasks {
+  color: magenta;
+}
+
+.far.fa-play-circle {
   color: magenta;
 }
 
@@ -125,7 +133,15 @@ background-color: #e9ecef97;
   color: red;
 }
 
+.fa.fa-user-shield {
+  color: red;
+}
+
 .fa.fa-child {
+  color: green;
+}
+
+.fa.fa-dollar-sign {
   color: green;
 }
 
@@ -158,6 +174,10 @@ background-color: #e9ecef97;
 }
 
 .fa.fa-bell {
+  color: yellow;
+}
+
+.fa.fa-trophy {
   color: yellow;
 }
 
