--- a/app/views/static_pages/become_teacher.html.haml
+++ b/app/views/static_pages/become_teacher.html.haml
@@ -35,13 +35,39 @@
 
     .row.mt-1
 
+%br
+.card-group.shadow
+  .card
+    .card-header
+      %h3 Incentives
+  .card-group.shadow
+    .card
+      .card-body
+        %b
+        .fa.fa-dollar-sign
+        %b Top Teacher Awards
+        Awards given to teachers with the highest ratings and most enrollments.
+    .card
+      .card-body
+        %b
+        .fa.fa-trophy
+        %b Competitions
+        Prizes given to the winners of teaching competitions.
+    .card
+      .card-body
+        %b
+        .fa.fa-user-shield
+        %b Advancement
+        Trusted teachers can apply to become site admin to help spread the deen.
+%br
+
 .card-group.shadow
   .card
     .card-header
       %h3 Why teach?
       %h1
       .fa.fa-book-open
-      The benefits of learning your deen and teaching that to others are well known among Muslims.
+      The benefits of learning your deen and teaching that to others are well known among Muslims. Teaching online makes it easy for you to reach students no matter where they are or who they are, from the children of reverts to victims of war torn countries, you can help!
 
   .card-group.shadow
     .card
@@ -67,6 +93,7 @@
         %small [Muslim].
 
 %br
+
 .card-group.shadow
   .card
     .card-body
@@ -74,18 +101,18 @@
         .fa.fa-clock
         Teach anytime
       %small
-        Courses can be built in days or years. Add your content and publish the course when you are ready, all at once or lesson by lesson
+        Courses can be built in days or years. Add your content and publish the course when you are ready, all at once or lesson by lesson.
   .card
     .card-body
       %b
         .far.fa-check-circle
         Teach from anywhere
       %small
-        Spread dawah to children all over the world. Everything is online, so you can teach no matter where you are
+        Spread dawah to children all over the world. Everything is online, so you can teach no matter where you are.
   .card
     .card-body
       %b
         .far.fa-play-circle
         Teach anything
       %small
-        It's our responsibility to teach what we know so spread your knowledge big or small
+        It's our responsibility to teach what we know so spread your knowledge big or small!
